[gd_scene load_steps=14 format=2]

[ext_resource path="res://m3x6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_basin_blue_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://scenes/OBJECTS/WaterFountain.gd" type="Script" id=3]
[ext_resource path="res://textures/Tiles/heart.png" type="Texture" id=4]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_basin_blue_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_top.png" type="Texture" id=6]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_mid_blue_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_mid_blue_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_basin_blue_anim_f2.png" type="Texture" id=9]
[ext_resource path="res://textures/Tiles/Tiles/wall_fountain_mid_blue_anim_f1.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="WaterFountain" type="StaticBody2D"]
z_index = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
frames = SubResource( 2 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -8, 12, -6, 14, 6, 14, 8, 12, 8, 4, -8, 4 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2048

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
polygon = PoolVector2Array( -16, 32, -28, 16, -28, 0, 28, 0, 28, 16, 16, 32 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2147549184
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -6, 14, -8, 12, -8, -6, -6, -6, -6, -10, 6, -10, 6, -6, 8, -6, 8, 12, 6, 14 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 6 )

[node name="SpriteHeart" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -7.0
margin_top = -9.0
margin_right = 7.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 3 )
text = "1:00"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
